fixed containers to wrap text, fixed mobile layout responsiveness, updated footer to stick

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
   color: white;
 }
 
-.page-container {
+.container-fluid {
   position: relative;
   min-height: 95.8vh;
   background-image: url("attachments/ignasi_pattern_s.png");
@@ -17,17 +17,16 @@ h1 {
 }
 
 p {
-  text-align: justify;
   color: black;
-  text-align: center;
-  z-index: 100;
-  position: relative;
   margin-left: 10px;
+  margin-top: -5%;
+  word-wrap: break-word;
 }
 
 .card {
+  max-width: 100%;
   float: left;
-  margin: 200px;
+  margin-top: 15%;
 }
 .accent_footer {
   background-color: rgb(18, 159, 149);
@@ -38,7 +37,13 @@ p {
 
 #main_footer {
   background-color: rgb(83, 83, 83);
-  position: ab;
+  position: absolute;
   height: 2.5rem;
   width: 100%;
+}
+
+img {
+  margin-left: 10px;
+  float: left;
+  padding-right: 5%;
 }
